fix the overflow problem on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -5,37 +5,43 @@
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
-
 body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  overflow: hidden;
+}
+.wrapper {
+  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   background-color: hsl(185, 75%, 39%);
   overflow: hidden;
+  position: relative;
 }
 .svg-top {
   position: absolute;
   top: -413px;
   left: -300px;
-  z-index: -1;
 }
 .svg-bottom {
   position: absolute;
   top: 501px;
   right: -200px;
-  z-index: -1;
 }
 
 .main {
+  z-index: 1;
   background-color: white;
   width: 350px;
   height: 375px;
   border-radius: 15px;
   overflow: hidden;
-  -webkit-box-shadow: 0px 16px 77px -30px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 16px 77px -30px rgba(0,0,0,0.75);
-box-shadow: 0px 16px 77px -30px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0px 16px 77px -30px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 16px 77px -30px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 16px 77px -30px rgba(0, 0, 0, 0.75);
 }
 .upper-card {
   height: 200px;
@@ -105,12 +111,11 @@ box-shadow: 0px 16px 77px -30px rgba(0,0,0,0.75);
     position: absolute;
     top: -613px;
     left: -670px;
-    z-index: -1;
   }
   .svg-bottom {
     position: absolute;
     top: 521px;
     right: -620px;
-    z-index: -1;
+    z-index: 0;
   }
 }
